Corrected book section citations

--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -221,7 +221,7 @@ solares), dando como resultado el espectro de la estrella.
 Entre los códigos de modelos de atmósferas estelares más utilizados está el de
 \code{ATLAS} escrito por Robert L. Kurucz. A continuación se especifican las
 suposiciones empleadas en el código de \code{ATLAS} descritas en
-\citetbookchapter{phoebeScientificReference}{4.2}; para una discusión completa
+\citetbooksection{phoebeScientificReference}{4.2}; para una discusión completa
 del programa es necesario hacer referencia a \autocite{kurucz_atlas_1970}.
 
 Este modelo parte de las condiciones del \textit{equilibrio hidrostático} y el
@@ -240,7 +240,7 @@ para un ajuste adecuado a los datos observacionales dados). %TODO: cite later se
 \begin{figure}[!ht]
 	\centering
 	\includegraphics[scale=0.33]{Introduccion/Figures/Figura Kurucz_PHOEBE Reference.png}
-	\caption{Espectros sintéticos de las tablas de Kurucz para estrellas de varias temperaturas. El resto de los parámetros físicos utilizados se mantuvieron fijos para los cuatro modelos: $\log{g/g_0} = 4.0$ y [M/H] = 0.0. Figura obtenida de \citetbookchapter{phoebeScientificReference}{4.2}.}
+	\caption{Espectros sintéticos de las tablas de Kurucz para estrellas de varias temperaturas. El resto de los parámetros físicos utilizados se mantuvieron fijos para los cuatro modelos: $\log{g/g_0} = 4.0$ y [M/H] = 0.0. Figura obtenida de \citetbooksection{phoebeScientificReference}{4.2}.}
 	\label{figuraKuruczEspectro}
 \end{figure}
 
