--- a/Tesis.tex
+++ b/Tesis.tex
@@ -253,6 +253,7 @@
 \newcommand{\refequations}[1]{{\color{MyDarkGreen}\textbf{Ecuaciones \ref{#1}}}}
 \newcommand{\textapproxtilde}{\raisebox{-0.55ex}{\textasciitilde}}
 \newcommand{\citetbookchapter}[2]{\autocite[\textcolor{MyLightBlue}{Capítulo #2}]{#1}}
+\newcommand{\citetbooksection}[2]{\autocite[\textcolor{MyLightBlue}{Sección #2}]{#1}}
 
 % https://tex.stackexchange.com/questions/148634/no-caption-or-title-but-entry-in-list-of-figures#148637
 \DeclareCaptionLabelFormat{blank}{}
