--- a/ref.bib
+++ b/ref.bib
@@ -515,7 +515,8 @@ ADS Bibcode: 1959cbs..book.....K},
 @MISC{gdr3ReleaseDocumentation,
        author = {van Leeuwen, F. and de Bruijne, J. and Babusiaux, C. and Busso, G. and Casta\~neda, J. and Ducourant, C. and Fabricius, C. and Hambly, N. and Hobbs, D. and Luri, X. and Marrese, P.~M. and Mora, A. and Muinonen, K. and Pourbaix, D. and Rimoldini, L. and Roegiers, T. and Sartoretti, P. and Teyssier, D. and Ulla, A. and Utrilla, E. and Vallenari, A. and van Leeuwen, M. and Altavilla, G. and Altmann, M. and \'Alvarez, M.~A. and Andrae, R. and Antoja, T. and Antonio, M. and Arenou, F. and Audard, M. and Bailer-Jones, C.~A.~L. and Bakker, J. and Balbinot, E. and Barache, C. and Barblan, F. and Bastian, U. and Bauchet, N. and Bellas-Velidis, I. and Bellazzini, M. and Berthier, J. and Biermann, M. and Blomme, R. and Bombrun, A. and Bossini, D. and Brouillet, N. and Brown, A. and Brugaletta, E. and Busonero, D. and Butkevich, A. and Cacciari, C. and C\'anovas, H. and Cantat-Gaudin, T. and Carballo, R. and Carnerero, M.~I. and Carrasco, J.~M. and Cellino, A. and Cheek, N. and Clementini, G. and Clotet, M. and Creevey, O.~L. and Crowley, C. and Dafonte, C. and Damerdji, Y. and David, M. and David, P. and Davidson, M. and De Angeli, F. and De Ridder, J. and De Teodoro, P. and Delb\'o, M. and Delchambre, L. and Delisle, J. -B. and Dell-Oro, A. and Dharmawardena, T. and Diakit\'e, S. and Distefano, E. and Drimmel, R. and Duran, J. and Evans, D.~W. and Eyer, L. and Fabrizio, M. and Faigler, S. and Fern\'andez-Hern\'andez, J. and Figueras, F. and Findeisen, K. and Fouesneau, M. and Fr\'emat, Y. and Galluccio, L. and Garabato, D. and Garcia-Gutierrez, A. and Garofalo, A. and Gavras, P. and Giacobbe, P. and Giuffrida, G. and Gomel, R. and Gonz\'alez, \'A. and Gonz\'alez-N\'u\~nez, J. and Gosset, \'E. and Gracia-Abril, G. and Guerra, R. and Halbwachs, J. -L. and Harrison, D.~L. and Hatzidimitriou, D. and Heiter, U. and Helmi, A. and Henar Sarmiento, M. and Hernandez, J. and Hestroffer, D. and Hodgkin, S. and Holl, B. and Hutton, A. and Jevardat de Fombelle, G. and Jordi, C. and Jorissen, A. and Katz, D. and Khanna, S. and Klioner, S. and Kordopatis, G. and Korn, A.~J. and Krone-Martins, A. and Kruszy\'nska, K. and Lammers, U. and Lanzafame, A. and Lattanzi, M.~G. and Le Campion, J. -F. and Lebreton, Y. and Lebzelter, T. and Leccia, S. and Leclerc, N. and Lecoeur-Ta\"\ibi, I. and Licata, E. and Lindegren, L. and Lobel, A. and L\"offler, W. and Manteiga, M. and Mantelet, G. and Marinoni, S. and Marshall, D.~J. and Mart\'\in-Fleitas, J. and Masana, E. and Masip Vela, A. and Mazeh, T. and Messineo, R. and Michalik, D. and Mignard, F. and Molinaro, R. and Mongui\'o, M. and Montegriffo, P. and Morel, T. and Mowlavi, N. and Muraveva, T. and Nicolas, C. and Nienartowicz, K. and Ordenovic, C. and Osinde, J. and Pailler, F. and Pallas-Quintela, L. and Panahi, A. and Pancino, E. and Panem, C. and Pauwels, T. and Pichon, B. and Portell, J. and Rainer, M. and Raiteri, C.~M. and Ramos, P. and Recio-Blanco, A. and Reyl\'e, C. and Riello, M. and R\'\ios Diaz, C. and Ripepi, V. and Riva, A. and Rixon, G. and Robin, A.~C. and Romero-G\'omez, M. and Rowell, N. and Rybicki, K.~A. and Rybizki, J. and Sadowski, G. and S\'aez-N\'u\~nez, A. and Sahlmann, J. and Sanna, N. and Sarro Baro, L.~M. and Schultheis, M. and Seabroke, G. and Segovia Serrato, J.~C. and Segransan, D. and Siddiqui, H. and Siopis, C. and Smart, R. and Sordo, R. and Soubiran, C. and Sozzetti, A. and Spina, L. and Spoto, F. and Stephenson, C. and Tanga. P. and Teixeira, R. and Th\'evenin, F. and Torra, F. and Trabucchi, M. and Turon, C. and Weiler, M. and Wyrzykowski, \L. and Zucker, S.},
         title = "{Gaia DR3 documentation}",
- howpublished = {Gaia DR3 documentation, European Space Agency; Gaia Data Processing and Analysis Consortium. Online at <A href=``https://gea.esac.esa.int/archive/documentation/GDR3/index.html''>https://gea.esac.esa.int/archive/documentation/GDR3/index.html</A>, id. 1},
+ howpublished = {Gaia DR3 documentation, European Space Agency; Gaia Data Processing and Analysis Consortium.},
+		url   = {https://gea.esac.esa.int/archive/documentation/GDR3/index.html},
          year = 2022,
         month = jun,
           eid = {1},
