--- a/Tesis.tex
+++ b/Tesis.tex
@@ -31,6 +31,7 @@
 
 \usepackage{csquotes}
 \usepackage[style=authoryear, natbib=true, backend=biber]{biblatex}
+% \usepackage[style=phys, natbib=true, backend=biber]{biblatex}
 \addbibresource[]{ref.bib}
 
 \ExplSyntaxOn
