--- a/ref.bib
+++ b/ref.bib
@@ -670,3 +670,56 @@ ADS Bibcode: 1959cbs..book.....K},
 	urldate = {2024-05-31},
 	date = {1965-01-01}
 }
+
+@misc{speagle_conceptual_intro_mcmc_2020,
+	title = {A Conceptual Introduction to Markov Chain Monte Carlo Methods},
+	url = {http://arxiv.org/abs/1909.12313},
+	abstract = {Markov Chain Monte Carlo ({MCMC}) methods have become a cornerstone of many modern scientific analyses by providing a straightforward approach to numerically estimate uncertainties in the parameters of a model using a sequence of random samples. This article provides a basic introduction to {MCMC} methods by establishing a strong conceptual understanding of what problems {MCMC} methods are trying to solve, why we want to use them, and how they work in theory and in practice. To develop these concepts, I outline the foundations of Bayesian inference, discuss how posterior distributions are used in practice, explore basic approaches to estimate posterior-based quantities, and derive their link to Monte Carlo sampling and {MCMC}. Using a simple toy problem, I then demonstrate how these concepts can be used to understand the benefits and drawbacks of various {MCMC} approaches. Exercises designed to highlight various concepts are also included throughout the article.},
+	number = {{arXiv}:1909.12313},
+	publisher = {{arXiv}},
+	author = {Speagle, Joshua S.},
+	urldate = {2024-06-03},
+	date = {2020-03-07},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1909.12313 [astro-ph, physics:physics, stat]},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Data Analysis, Statistics and Probability, Statistics - Other Statistics}
+}
+
+@article{foreman-mackey_emcee_2013,
+	title = {emcee: The {MCMC} Hammer},
+	volume = {125},
+	issn = {00046280, 15383873},
+	url = {http://arxiv.org/abs/1202.3665},
+	doi = {10.1086/670067},
+	shorttitle = {emcee},
+	abstract = {We introduce a stable, well tested Python implementation of the aﬃneinvariant ensemble sampler for Markov chain Monte Carlo ({MCMC}) proposed by Goodman \& Weare (2010). The code is open source and has already been used in several published projects in the astrophysics literature. The algorithm behind emcee has several advantages over traditional {MCMC} sampling methods and it has excellent performance as measured by the autocorrelation time (or function calls per independent sample). One major advantage of the algorithm is that it requires hand-tuning of only 1 or 2 parameters compared to ∼ N2 for a traditional algorithm in an N-dimensional parameter space. In this document, we describe the algorithm and the details of our implementation. Exploiting the parallelism of the ensemble method, emcee permits any user to take advantage of multiple {CPU} cores without extra eﬀort. The code is available online at http://dan.iel.fm/emcee under the {MIT} License.},
+	pages = {306--312},
+	number = {925},
+	journaltitle = {Publications of the Astronomical Society of the Pacific},
+	shortjournal = {Publications of the Astronomical Society of the Pacific},
+	author = {Foreman-Mackey, Daniel and Hogg, David W. and Lang, Dustin and Goodman, Jonathan},
+	urldate = {2024-06-17},
+	date = {2013-03},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1202.3665 [astro-ph, physics:physics, stat]},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Computational Physics, Statistics - Computation}
+}
+
+@article{latkovic_statistics_700_wuma_2021,
+	title = {Statistics of 700 Individually Studied W {UMa} Stars},
+	volume = {254},
+	issn = {0067-0049},
+	url = {https://ui.adsabs.harvard.edu/abs/2021ApJS..254...10L},
+	doi = {10.3847/1538-4365/abeb23},
+	abstract = {We present a statistical study of the largest bibliographic compilation of stellar and orbital parameters of W {UMa} stars derived by light-curve synthesis with Roche models. The compilation includes nearly 700 individually investigated objects from over 450 distinct publications. Almost 70\% of this sample is comprised of stars observed in the past decade that have not been considered in previous statistical studies. We estimate the ages of the cataloged stars, model the distributions of their periods, mass ratios, temperatures, and other quantities, and compare them with the data from the Catalina Real-Time Transient Survey, {LAMOST}, and Gaia archives. As only a small fraction of the sample has radial-velocity curves, we examine the reliability of the photometric mass ratios in totally and partially eclipsing systems and find that totally eclipsing W {UMa} stars with photometric mass ratios have the same parameter distributions as those with spectroscopic mass ratios. Most of the stars with reliable parameters have mass ratios below 0.5 and orbital periods shorter than 0.5 days. Stars with longer periods and temperatures above 7000 K stand out as outliers and should not be labeled W {UMa} binaries. The collected data are available as an online database at https://wumacat.aob.rs.},
+	pages = {10},
+	journaltitle = {The Astrophysical Journal Supplement Series},
+	author = {Latković, Olivera and Čeki, Atila and Lazarević, Sanja},
+	urldate = {2024-06-19},
+	date = {2021-05-01},
+	note = {Publisher: {IOP}
+{ADS} Bibcode: 2021ApJS..254...10L},
+	keywords = {254, 444, 555, Astrophysics - Solar and Stellar Astrophysics, Close binary stars, Eclipsing binary stars, Fundamental parameters of stars}
+}
